fix for overflow y carousel

--- a/web/src/routes/Dashboard/components/carousel/DirectiveCarousel.scss
+++ b/web/src/routes/Dashboard/components/carousel/DirectiveCarousel.scss
@@ -6,6 +6,7 @@
   padding: .75rem 0 .0 1rem;
   background: #fafafa;
   overflow-x: auto;
+  overflow-y: hidden;
   flex-wrap: nowrap;
   border-bottom: 1px solid #ccc;
 }
